start and add footer and header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Start Template</title>
+    <title>Котодім</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="stylesheet"
@@ -16,43 +23,19 @@
   <body>
     <header class="header-section">
       <div class="header-container container">
-        <nav class="page-nav">
-          <a class="logo-link link" href="">
-            <svg class="sertificate-icon" width="32" height="32">
-              <use href="./images/icons.svg#icon-home"></use>
-            </svg>
-          </a>
-          <ul class="menu list">
-            <li class="menu-item">
-              <a class="menu-link link" href="">About</a>
-            </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="">Services</a>
-            </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="">Prices</a>
-            </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <button class="header-btn btn">
-          Send
-          <svg class="" width="24" height="24">
-            <use href="./images/icons.svg#icon-paper-plane"></use>
+        <div class="title-wrapper">
+          <svg class="logo-icon" width="22" height="22">
+            <use href="./images/icons.svg#icon-cat"></use>
           </svg>
-        </button>
+          <h1 class="title">Котодім</h1>
+        </div>
       </div>
     </header>
 
     <main>
       <!-- HERO -->
       <section class="hero-section">
-        <div class="hero-container container">
-          <h1 class="hero-title">Start Template</h1>
-          <p>Hello World!</p>
-        </div>
+        <div class="hero-container container"></div>
       </section>
 
       <!-- SECTION -->
@@ -176,7 +159,12 @@
     <!-- FOOTER -->
     <footer class="footer-section">
       <div class="footer-container container">
-        <p class="footer-desc">&copy; 2023</p>
+        <div class="title-wrapper">
+          <svg class="logo-icon" width="22" height="22">
+            <use href="./images/icons.svg#icon-cat"></use>
+          </svg>
+          <h1 class="title">Котодім</h1>
+        </div>
       </div>
     </footer>
   </body>
