--- a/index.html
+++ b/index.html
@@ -35,7 +35,28 @@
     <main>
       <!-- HERO -->
       <section class="hero-section">
-        <div class="hero-container container"></div>
+        <div class="hero-container container">
+          <div class="hero-images-wrapper">
+            <div class="hero-img-1">
+              <img class="hero-img" src="/images/hero-1.jpg" alt="" />
+              <div class="hero-img-title">
+                <p>Коти та їхні чудові навички: від полювання до загадкових здібностей</p>
+              </div>
+            </div>
+            <div class="hero-img-2">
+              <img class="hero-img" src="/images/hero-2.jpg" alt="" />
+              <div class="hero-img-title">
+                <p>Коти в літературі та мистецтві: від Егіпетських богів до сучасних майстрів</p>
+              </div>
+            </div>
+            <div class="hero-img-3">
+              <img class="hero-img" src="/images/hero-2.jpg" alt="" />
+              <div class="hero-img-title">
+                <p>Котячі породи для активних власників: як вибрати компаньйона</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- SECTION -->
