add articles and social

--- a/index.html
+++ b/index.html
@@ -59,120 +59,114 @@
         </div>
       </section>
 
-      <!-- SECTION -->
-      <section class="section">
-        <div class="section-container container">
-          <h2 class="section-title">Icons</h2>
-          <ul class="icons-list list">
-            <li>
-              <a href="">
-                <svg class="" width="32" height="32">
+      <div class="main container">
+        <section class="articles-container">
+          <article class="article">
+            <img class="article-img" src="/images/article-1.jpg" />
+            <div class="article-content">
+              <h3 class="article-title">Найпопулярніші породи котів: який кіт підходить вам?</h3>
+              <p class="article-text">
+                Вивчіть найпопулярніші породи котів і їхні особливості, щоб зробити інформований
+                вибір, який підходить саме вам.
+              </p>
+            </div>
+          </article>
+
+          <article class="article">
+            <img class="article-img" src="/images/article-2.jpg" />
+            <div class="article-content">
+              <h3 class="article-title">
+                Як піклуватися про вашого пухнастого друга: догляд за котом
+              </h3>
+              <p class="article-text">
+                Дізнайтеся про основні аспекти догляду за котом, включаючи годування, гігієну та
+                взаємодію з вашим улюбленцем.
+              </p>
+            </div>
+          </article>
+
+          <article class="article">
+            <img class="article-img" src="/images/article-3.jpg" />
+            <div class="article-content">
+              <h3 class="article-title">Забавні факти про котів, які вас здивують</h3>
+              <p class="article-text">
+                Веселі та цікаві факти про котів, які піднімуть вам настрій та розкажуть про їхні
+                унікальність.
+              </p>
+            </div>
+          </article>
+
+          <article class="article">
+            <img class="article-img" src="/images/article-4.jpg" />
+            <div class="article-content">
+              <h3 class="article-title">Історія та культурна значущість котів в усьому світ</h3>
+              <p class="article-text">
+                Вивчіть, як коти впливали на культури різних народів та дізнайтеся історію спільного
+                життя людей і котів.
+              </p>
+            </div>
+          </article>
+        </section>
+
+        <section>
+          <h2 class="social-title">Соцмережі</h2>
+          <ul class="social-list list">
+            <li class="social-item instagram">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="32" height="32">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
+                230.000
               </a>
             </li>
-            <li>
-              <a href="">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <svg class="" width="32" height="32">
+            <li class="social-item youtube">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="32" height="32">
                   <use href="./images/icons.svg#icon-youtube"></use>
                 </svg>
+                230.000
               </a>
             </li>
-            <li>
-              <a href="" title="icon-youtube-play">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-youtube-play"></use>
+            <li class="social-item github">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-github"></use>
                 </svg>
+                230.000
               </a>
             </li>
-            <li>
-              <a href="" title="icon-tumblr">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-tumblr"></use>
+            <li class="social-item tiktok">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-tiktok"></use>
                 </svg>
+                230.000
               </a>
             </li>
-            <li>
-              <a href="" title="icon-paper-plane">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-paper-plane"></use>
+            <li class="social-item twitter">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
+                230.000
               </a>
             </li>
-            <li>
-              <a href="" title="icon-envelope-o">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-envelope-o"></use>
+            <li class="social-item facebook">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
-              </a>
-            </li>
-            <li>
-              <a href="" title="icon-user">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-user"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="" title="icon-check">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-check"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="" title="icon-close">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="" title="icon-home">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-home"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="" title="icon-comment">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-comment"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="" title="icon-bars">
-                <svg class="" width="32" height="32">
-                  <use href="./images/icons.svg#icon-bars"></use>
-                </svg>
+                230.000
               </a>
             </li>
           </ul>
-        </div>
-      </section>
-      <section></section>
+        </section>
+
+        <!-- <section>
+          <h2>Відео з пухнастиками</h2>
+        </section> -->
+      </div>
+
       <section></section>
       <section></section>
     </main>
