fix path images

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div class="hero-container container">
           <div class="hero-images-wrapper">
             <div class="hero-img-1">
-              <img class="hero-img" src="/images/hero-1.jpg" alt="" />
+              <img class="hero-img" src="./images/hero-1.jpg" alt="" />
               <div class="hero-img-title">
                 <p>Коти та їхні чудові навички: від полювання до загадкових здібностей</p>
               </div>
             </div>
             <div class="hero-img-2">
-              <img class="hero-img" src="/images/hero-2.jpg" alt="" />
+              <img class="hero-img" src="./images/hero-2.jpg" alt="" />
               <div class="hero-img-title">
                 <p>Коти в літературі та мистецтві: від Егіпетських богів до сучасних майстрів</p>
               </div>
             </div>
             <div class="hero-img-3">
-              <img class="hero-img" src="/images/hero-2.jpg" alt="" />
+              <img class="hero-img" src="./images/hero-2.jpg" alt="" />
               <div class="hero-img-title">
                 <p>Котячі породи для активних власників: як вибрати компаньйона</p>
               </div>
@@ -62,7 +62,7 @@
       <div class="main container">
         <section class="articles-container">
           <article class="article">
-            <img class="article-img" src="/images/article-1.jpg" />
+            <img class="article-img" src="./images/article-1.jpg" />
             <div class="article-content">
               <h3 class="article-title">Найпопулярніші породи котів: який кіт підходить вам?</h3>
               <p class="article-text">
@@ -73,7 +73,7 @@
           </article>
 
           <article class="article">
-            <img class="article-img" src="/images/article-2.jpg" />
+            <img class="article-img" src="./images/article-2.jpg" />
             <div class="article-content">
               <h3 class="article-title">
                 Як піклуватися про вашого пухнастого друга: догляд за котом
@@ -86,7 +86,7 @@
           </article>
 
           <article class="article">
-            <img class="article-img" src="/images/article-3.jpg" />
+            <img class="article-img" src="./images/article-3.jpg" />
             <div class="article-content">
               <h3 class="article-title">Забавні факти про котів, які вас здивують</h3>
               <p class="article-text">
@@ -97,7 +97,7 @@
           </article>
 
           <article class="article">
-            <img class="article-img" src="/images/article-4.jpg" />
+            <img class="article-img" src="./images/article-4.jpg" />
             <div class="article-content">
               <h3 class="article-title">Історія та культурна значущість котів в усьому світ</h3>
               <p class="article-text">
