--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Котодім" />
+    <meta name="keywords" content="cat, кіт" />
     <title>Котодім</title>
 
     <link rel="shortcut icon" href="./images/cat.svg" type="image/x-icon" />
@@ -51,7 +53,7 @@
                       media="(min-width: 320px) and (max-width: 767px)"
                       srcset="./images/hero-1-small.jpg"
                     />
-                    <img class="hero-img" src="./images/hero-1-small.jpg" alt="Cat" />
+                    <img class="hero-img" src="./images/hero-1-small.jpg" alt="Cat" width="288" />
                   </picture>
 
                   <div class="overlay">
@@ -68,6 +70,7 @@
                     src="./images/hero-2.jpg"
                     srcset="./images/hero-2.jpg 1x, ./images/hero-2@2x.jpg 2x"
                     alt="Cat"
+                    width="288"
                   />
                   <div class="overlay">
                     <h3 class="hero-img-title">
@@ -83,6 +86,7 @@
                     src="./images/hero-2.jpg"
                     srcset="./images/hero-2.jpg 1x, ./images/hero-2@2x.jpg 2x"
                     alt="Cat"
+                    width="288"
                   />
                   <div class="overlay">
                     <h3 class="hero-img-title">
@@ -119,6 +123,7 @@
                 src="./images/article-2.jpg"
                 srcset="./images/article-2.jpg 1x, ./images/article-2@2x.jpg 2x"
                 alt="Cat"
+                width="288"
               />
               <div class="article-content">
                 <h3 class="article-title">
@@ -137,6 +142,7 @@
                 src="./images/article-3.jpg"
                 srcset="./images/article-3.jpg 1x, ./images/article-3@2x.jpg 2x"
                 alt="Cat"
+                width="288"
               />
               <div class="article-content">
                 <h3 class="article-title">Забавні факти про котів, які вас здивують</h3>
@@ -153,6 +159,7 @@
                 src="./images/article-4.jpg"
                 srcset="./images/article-4.jpg 1x, ./images/article-4@2x.jpg 2x"
                 alt="Cat"
+                width="288"
               />
               <div class="article-content">
                 <h3 class="article-title">Історія та культурна значущість котів в усьому світ</h3>
@@ -225,6 +232,7 @@
                 src="./images/video.jpg"
                 srcset="./images/video.jpg 1x, ./images/video@2x.jpg 2x"
                 alt="Cat"
+                width="288"
             /></a>
           </section>
         </section>
@@ -238,7 +246,7 @@
           <svg class="logo-icon" width="22" height="22">
             <use href="./images/icons.svg#icon-cat"></use>
           </svg>
-          <h1 class="title">Котодім</h1>
+          <h2 class="title">Котодім</h2>
         </div>
       </div>
     </footer>
